--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,29 @@
     />
   </head>
   <body class="bg-black min-h-screen w-auto">
+    <!-- Header with Logo and Contact Button -->
+    <header class="sticky top-0 z-10 bg-black/80 backdrop-blur-sm shadow-sm">
+      <div
+        class="container mx-auto px-10 py-4 flex justify-between items-center"
+      >
+        <!-- Text Logo -->
+        <a
+          href="#"
+          class="text-2xl font-bold font-{'Product_Sans'} text-white bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent"
+        >
+          RolandGriffin
+        </a>
+
+        <!-- Contact Button -->
+        <a
+          href="#contact"
+          class="px-3.5 py-2.5 bg-white m-2 rounded-full bg-white text-black shadow hover:shadow-md transition-all duration-300 hover:opacity-90 flex items-center"
+        >
+          <i class="fas fa-paper-plane mr-2"></i>
+          Contact Me
+        </a>
+      </div>
+    </header>
     <div
       class="container mx-auto px-10 py-20 flex flex-col items-center justify-center min-h-screen"
     >
